# sample-financial-fraud-detection-with-nvidia

./: .gitignore  AWS_README.md  CHANGELOG.md  Makefile  README.md  THIRD-PARTY  new-probe-scan.sarif  probe-test-results.json  pyproject.toml  setup.md
Launchable/: financial-fraud-nim-launchable.ipynb  requirements.txt
conda/: notebook_env.yaml
data/: readme.md
docs/: aws-architecture-mermaid.md  download.md  sagemaker_migration_plan.md  setup.md  use_case.md
infra/: .gitignore  README.md  cdk.context.json  cdk.json  package-lock.json  package.json
infra/lib/: alb-default-ingress-class-addon.ts  deploykf-app.ts  domain.ts  kf-addon.ts  model-bucket.ts  nvidia-fraud-detection-blueprint.ts  sagemaker-domain-stack.ts  sagemaker-infrastructure-stack.ts  sagemaker-preprocessing-image-repo.ts  sagemaker-training-image-repo.ts  (+5 more)
notebooks/: demo-script.ipynb  financial-fraud-nim-both.ipynb  financial-fraud-nim-usage.ipynb  financial-fraud-nim-usage_with_shapley.ipynb  financial-fraud-usage-v2.ipynb  financial-fraud-usage.ipynb  financial-fraud-usage_NEW.ipynb  test-sagemaker-endpoint.ipynb  training_nim_usage_and_serving_models_with_trition.ipynb
src/: preprocess_TabFormer.py  preprocess_TabFormer_NEW.py  preprocess_TabFormer_lp.py  preprocess_TabFormer_sagemaker.py  readme.md  train_sagemaker.py
templates/: triton-server-asg.yaml  triton-server-complete.yaml
triton/: Dockerfile  nginx.conf  serve
workflows/: README.md  pyproject.toml
workflows/src/workflows/: __init__.py  deploy_endpoint.py  sagemaker_fraud_detection_pipeline.py  test_endpoint.py
(+12 files in other folders)
