[project]
name = "fraud-detection-nvidia"
version = "0.1.0"
description = "Financial fraud detection pipeline with NVIDIA GPU acceleration on SageMaker"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "category-encoders==2.8.0",
    "numpy==1.26.4",
    "matplotlib==3.10.1",
    "seaborn==0.13.2",
    "pandas==2.2.3",
    "scikit-learn==1.6.1",
    "boto3>=1.35.0",
    "botocore>=1.35.0",
    "tritonclient[http]>=2.55.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
]
