[project]
name = "workflows"
version = "0.1.0"
description = "Pipeline workflows for Sample Financial Fraud Detection with Nvidia for Kubeflow"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.12",
    "category-encoders>=2.9.0",
    "sagemaker==3.3.0",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pipdeptree>=2.30.0",
    "pyarrow>=22.0.0",
    "scikit-learn>=1.8.0",
]

[dependency-groups]
dev = [
    "docker>=7.0.0",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "scikit-learn>=1.8.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
